fix: height for search for wrap

--- a/react/src/components/userLayout.module.scss
+++ b/react/src/components/userLayout.module.scss
@@ -116,7 +116,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      min-width: 100vh;
+      min-height: 100vh;
     }
   }
 
